--- a/docs/api/createSlice.mdx
+++ b/docs/api/createSlice.mdx
@@ -22,7 +22,7 @@ interface CounterState {
   value: number
 }
 
-const initialState: CounterState = { value: 0 }
+const initialState = { value: 0 } as CounterState
 
 const counterSlice = createSlice({
   name: 'counter',
