--- a/docs/api/otherExports.mdx
+++ b/docs/api/otherExports.mdx
@@ -32,7 +32,7 @@ The default immutable update function from the [`immer` library](https://immerjs
 
 ### `original`
 
-[The `original` function](https://immerjs.github.io/immer/docs/original) from the [`immer` library](https://immerjs.github.io/immer/), which returns the original object. This is particularly useful for referencial equality check in reducers.
+[The `original` function](https://immerjs.github.io/immer/docs/original) from the [`immer` library](https://immerjs.github.io/immer/), which returns the original object. This is particularly useful for referential equality check in reducers.
 
 ```ts
 import { createReducer, createAction, current } from '@reduxjs/toolkit'
