--- a/docs/api/otherExports.mdx
+++ b/docs/api/otherExports.mdx
@@ -52,6 +52,10 @@ const todosReducer = createReducer(initialState, builder => {
 })
 ```
 
+### `isDraft`
+
+[The `isDraft` function](https://immerjs.github.io/immer/original) from the [`immer` library](https://immerjs.github.io/immer/), which checks to see if a given value is a Proxy-wrapped "draft" state.
+
 ### `combineReducers`
 
 Redux's [`combineReducers`](https://redux.js.org/api/combinereducers), re-exported for convenience. While `configureStore` calls this internally, you may wish to call it yourself to compose multiple levels of slice reducers.
