--- a/docs/api/otherExports.mdx
+++ b/docs/api/otherExports.mdx
@@ -11,7 +11,7 @@ Redux Toolkit exports some of its internal utilities, and re-exports additional 
 
 ### `nanoid`
 
-An inlined copy of [`nanoid/nonsecure`](https://github.com/ai/nanoid). Generates a non-cryptographically-secure random ID string. Automatically used by `createAsyncThunk` for request IDs, but may also be useful for other cases as well.
+An inlined copy of [`nanoid/nonsecure`](https://github.com/ai/nanoid). Generates a non-cryptographically-secure random ID string. `createAsyncThunk` uses this by default for request IDs. May also be useful for other cases as well.
 
 ```ts
 import { nanoid } from '@reduxjs/toolkit'
