--- a/docs/api/rtk-query/createApi.mdx
+++ b/docs/api/rtk-query/createApi.mdx
@@ -111,13 +111,13 @@ export const defaultSerializeQueryArgs: SerializeQueryArgs<any> = ({
       }, {})
     ```
 
-- `provides` _(optional)_
+- `providesTags` _(optional)_
 
-  [summary](docblock://query/endpointDefinitions.ts?token=QueryExtraOptions.provides)
+  [summary](docblock://query/endpointDefinitions.ts?token=QueryExtraOptions.providesTags)
 
-- `invalidates` _(optional)_
+- `invalidatesTags` _(optional)_
 
-  [summary](docblock://query/endpointDefinitions.ts?token=MutationExtraOptions.invalidates)
+  [summary](docblock://query/endpointDefinitions.ts?token=MutationExtraOptions.invalidatesTags)
 
 - `onStart`, `onError` and `onSuccess` _(optional)_ - Available to both [queries](../../usage/rtk-query/queries.mdx) and [mutations](../../usage/rtk-query/mutations.mdx)
   - Can be used in `mutations` for [optimistic updates](../../usage/rtk-query/optimistic-updates.mdx).
