- Expand on `Cached Data` page - Relocate cache invalidation sections from `Mutations` page to `Cached Data`

--- a/docs/usage/rtk-query/mutations.mdx
+++ b/docs/usage/rtk-query/mutations.mdx
@@ -139,169 +139,11 @@ export const PostDetail = () => {
 
 ### Advanced mutations with revalidation
 
-In the real world, it's very common that a developer would want to resync their local data cache with the server after performing a mutation (aka "revalidation"). RTK Query takes a more centralized approach to this and requires you to configure the invalidation behavior in your API service definition. Before getting started, let's cover some new terms used when defining an endpoint in a service:
+In the real world, it's very common that a developer would want to resync their local data cache with the server after performing a mutation (aka "revalidation"). RTK Query takes a more centralized approach to this and requires you to configure the invalidation behavior in your API service definition. See [Advanced Invalidation with abstract tag IDs](./cached-data#advanced-invalidation-with-abstract-tag-ids) for details on advanced invalidation handling with RTK Query.
 
-#### Tags
+### Example - Commented Posts Service
 
-For RTK Query, _tags_ are just a name that you can give to a specific collection of data to control caching and invalidation behavior, and are defined in an `tagTypes` argument. For example, in an application that has both `Posts` and `Users`, you would define `tagTypes: ['Posts', 'Users']` when calling `createApi`.
-
-#### Provides
-
-A _query_ can _provide_ tags to the cache. The `providesTags` argument can either be an array of `string` (such as `['Posts']`), `{type: string, id?: string|number}` or a callback that returns such an array. That function will be passed the result as the first argument, the response error as the second argument, and the argument originally passed into the `query` method as the third argument. Note that either the result or error arguments may be undefined based on whether the query was successful or not.
-
-#### Invalidates
-
-A _mutation_ can _invalidate_ specific tags in the cache. The `invalidatesTags` argument can either be an array of `string` (such as `['Posts']`), `{type: string, id?: string|number}` or a callback that returns such an array. That function will be passed the result as the first argument, the response error as the second argument, and the argument originally passed into the `query` method as the third argument. Note that either the result or error arguments may be undefined based on whether the mutation was successful or not.
-
-### Scenarios and Behaviors
-
-RTK Query provides _a lot_ of flexibility for how you can manage the invalidation behavior of your service. Let's look at a few different scenarios:
-
-#### Invalidating everything of a type
-
-```ts title="API Definition"
-// file: types.ts noEmit
-export interface Post {
-  id: number
-  name: string
-}
-export type PostsResponse = Post[]
-
-// file: api.ts
-import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react'
-import { Post, PostsResponse } from './types'
-
-export const api = createApi({
-  baseQuery: fetchBaseQuery({ baseUrl: '/' }),
-  tagTypes: ['Posts'],
-  endpoints: (build) => ({
-    getPosts: build.query<PostsResponse, void>({
-      query: () => 'posts',
-      providesTags: (result) =>
-        result ? result.map(({ id }) => ({ type: 'Posts', id })) : ['Posts'],
-    }),
-    addPost: build.mutation<Post, Partial<Post>>({
-      query: (body) => ({
-        url: `posts`,
-        method: 'POST',
-        body,
-      }),
-      invalidatesTags: ['Posts'],
-    }),
-    getPost: build.query<Post, number>({
-      query: (id) => `posts/${id}`,
-      providesTags: (result, error, id) => [{ type: 'Posts', id }],
-    }),
-  }),
-})
-
-export const { useGetPostsQuery, useGetPostQuery, useAddPostMutation } = api
-```
-
-```tsx title="App.tsx"
-function App() {
-  const { data: posts } = useGetPostsQuery()
-  const [addPost] = useAddPostMutation()
-
-  return (
-    <div>
-      <AddPost onAdd={addPost} />
-      <PostsList />
-      <PostDetail id={1} /> // Assume each PostDetail is subscribed via `const{' '}
-      {data} = useGetPostQuery(id)`
-      <PostDetail id={2} />
-      <PostDetail id={3} />
-    </div>
-  )
-}
-```
-
-**What to expect**
-
-When `addPost` is triggered, it would cause each `PostDetail` component to go back into a `isFetching` state because `addPost` invalidates the root tag, which causes _every query_ that provides 'Posts' to be re-run. In most cases, this may not be what you want to do. Imagine if you had 100 posts on the screen that all subscribed to a `getPost` query – in this case, you'd create 100 requests and send a ton of unnecessary traffic to your server, which we're trying to avoid in the first place! Even though the user would still see the last good cached result and potentially not notice anything other than their browser hiccuping, you still want to avoid this.
-
-#### Selectively invalidating lists
-
-Keep an eye on the `provides` property of `getPosts` - we'll explain why after.
-
-```ts title="API Definition"
-// file: types.ts noEmit
-export interface Post {
-  id: number
-  name: string
-}
-export type PostsResponse = Post[]
-
-// file: api.ts
-import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react'
-import { Post, PostsResponse } from './types'
-
-export const api = createApi({
-  baseQuery: fetchBaseQuery({ baseUrl: '/' }),
-  tagTypes: ['Posts'],
-  endpoints: (build) => ({
-    getPosts: build.query<PostsResponse, void>({
-      query: () => 'posts',
-      providesTags: (result) =>
-        result
-          ? [
-              ...result.map(({ id }) => ({ type: 'Posts', id }) as const),
-              { type: 'Posts', id: 'LIST' },
-            ]
-          : [{ type: 'Posts', id: 'LIST' }],
-    }),
-    addPost: build.mutation<Post, Partial<Post>>({
-      query(body) {
-        return {
-          url: `posts`,
-          method: 'POST',
-          body,
-        }
-      },
-      invalidatesTags: [{ type: 'Posts', id: 'LIST' }],
-    }),
-    getPost: build.query<Post, number>({
-      query: (id) => `posts/${id}`,
-      providesTags: (result, error, id) => [{ type: 'Posts', id }],
-    }),
-  }),
-})
-
-export const { useGetPostsQuery, useAddPostMutation, useGetPostQuery } = api
-```
-
-> **Note about 'LIST' and `id`s**
->
-> 1. `LIST` is an arbitrary string - technically speaking, you could use anything you want here, such as `ALL` or `*`. The important thing when choosing a custom id is to make sure there is no possibility of it colliding with an id that is returned by a query result. If you have unknown ids in your query results and don't want to risk it, you can go with point 3 below.
-> 2. You can add _many_ tag types for even more control
->    - `[{ type: 'Posts', id: 'LIST' }, { type: 'Posts', id: 'SVELTE_POSTS' }, { type: 'Posts', id: 'REACT_POSTS' }]`
-> 3. If the concept of using an `id` like 'LIST' seems strange to you, you can always add another `tagType` and invalidate it's root, but we recommend using the `id` approach as shown.
-
-```tsx title="App.tsx"
-function App() {
-  const { data: posts } = useGetPostsQuery()
-  const [addPost] = useAddPostMutation()
-
-  return (
-    <div>
-      <AddPost onAdd={addPost} />
-      <PostsList />
-      <PostDetail id={1} /> // Assume each PostDetail is subscribed via `const{' '}
-      {data} = useGetPostQuery(id)`
-      <PostDetail id={2} />
-      <PostDetail id={3} />
-    </div>
-  )
-}
-```
-
-**What to expect**
-
-When `addPost` is fired, it will only cause the `PostsList` to go into an `isFetching` state because `addPost` only invalidates the 'LIST' id, which causes `getPosts` to rerun (because it provides that specific id). So in your network tab, you would only see 1 new request fire for `GET /posts`. Once that resolves and assuming it returned updated data for ids 1, 2, and 3, the `PostDetail` components would then rerender with the latest data.
-
-### Commented Posts Service
-
-This is an example of a [CRUD service](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) for Posts. This implements the [Selectively invalidating lists](#selectively-invalidating-lists) strategy and will most likely serve as a good foundation for real applications.
+This is an example of a [CRUD service](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) for Posts. This implements the [Selectively invalidating lists](./cached-data#selectively-invalidating-lists) strategy and will most likely serve as a good foundation for real applications.
 
 ```ts title="src/app/services/posts.ts"
 // Or from '@reduxjs/toolkit/query' if not using the auto-generated hooks
@@ -385,8 +227,6 @@ export const {
   useDeletePostMutation,
 } = postApi
 ```
-
-### Example
 
 <iframe src="https://codesandbox.io/embed/concepts-mutations-4d98s?fontsize=14&hidenavigation=1&module=%2Fsrc%2Fapp%2Fservices%2Fposts.ts&theme=dark"
      style={{ width: '100%', height: '600px', border: 0, borderRadius: '4px', overflow: 'hidden' }}
