--- a/docs/tutorials/rtk-query.mdx
+++ b/docs/tutorials/rtk-query.mdx
@@ -40,8 +40,13 @@ To see how RTK Query works, let's walk through a basic usage example. For this e
 First, we'll create a service definition that queries the publicly available [PokeAPI](https://pokeapi.co/).
 
 ```ts title="src/services/pokemon.ts"
+// file: services/types.ts noEmit
+export type Pokemon = {}
+
+// file: services/pokemon.ts
 // Need to use the React-specific entry point to import createApi
 import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react'
+import { Pokemon } from './types'
 
 // highlight-start
 // Define a service using a base URL and expected endpoints
@@ -49,8 +54,8 @@ export const pokemonApi = createApi({
   reducerPath: 'pokemonApi',
   baseQuery: fetchBaseQuery({ baseUrl: 'https://pokeapi.co/api/v2/' }),
   endpoints: (builder) => ({
-    getPokemonByName: builder.query({
-      query: (name: string) => `pokemon/${name}`,
+    getPokemonByName: builder.query<Pokemon, string>({
+      query: (name) => `pokemon/${name}`,
     }),
   }),
 })
@@ -70,6 +75,20 @@ With RTK Query, you usually define your entire API definition in one place. This
 An RTK service generates a "slice reducer" that should be included in the Redux root reducer, and a custom middleware that handles the data fetching. Both need to be added to the Redux store.
 
 ```ts title="src/store.ts"
+// file: services/pokemon.ts noEmit
+import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react'
+
+export const pokemonApi = createApi({
+  reducerPath: 'pokemonApi',
+  baseQuery: fetchBaseQuery({ baseUrl: 'https://pokeapi.co/api/v2/' }),
+  endpoints: (builder) => ({
+    getPokemonByName: builder.query({
+      query: (name: string) => `pokemon/${name}`,
+    }),
+  }),
+})
+
+// file: store.ts
 import { configureStore } from '@reduxjs/toolkit'
 // Or from '@reduxjs/toolkit/query/react'
 import { setupListeners } from '@reduxjs/toolkit/query'
@@ -99,7 +118,7 @@ setupListeners(store.dispatch)
 
 If you haven't already done so, follow the standard pattern for providing the Redux store to the rest of your React application component tree:
 
-```ts title="src/index.tsx"
+```tsx title="src/index.tsx"
 import * as React from 'react'
 import { render } from 'react-dom'
 import { Provider } from 'react-redux'
@@ -120,7 +139,7 @@ render(
 
 Once a service has been defined, you can import the hooks to make a request.
 
-```ts title="src/App.tsx"
+```tsx title="src/App.tsx" no-transpile
 import * as React from 'react'
 // highlight-next-line
 import { useGetPokemonByNameQuery } from './services/pokemon'
@@ -154,7 +173,13 @@ When making a request, you're able to track the state in several ways. You can a
 
 <iframe
   src="https://codesandbox.io/embed/getting-started-basic-17n8h?fontsize=12&hidenavigation=1&theme=dark"
-  style={{ width: '100%', height: '500px', border: 0, borderRadius: '4px', overflow: 'hidden' }}
+  style={{
+    width: '100%',
+    height: '500px',
+    border: 0,
+    borderRadius: '4px',
+    overflow: 'hidden',
+  }}
   title="rtk-query-getting-started-basic"
   allow="geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb"
   sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
@@ -168,7 +193,13 @@ RTK Query ensures that any component that subscribes to the same query will alwa
 
 <iframe
   src="https://codesandbox.io/embed/getting-started-advanced-8tx2b?file=/src/App.tsx?fontsize=12&hidenavigation=1&theme=dark"
-  style={{ width: '100%', height: '600px', border: 0, borderRadius: '4px', overflow: 'hidden' }}
+  style={{
+    width: '100%',
+    height: '600px',
+    border: 0,
+    borderRadius: '4px',
+    overflow: 'hidden',
+  }}
   title="rtk-query-getting-started-advanced"
   allow="geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb"
   sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
