--- a/docs/usage/rtk-query/prefetching.mdx
+++ b/docs/usage/rtk-query/prefetching.mdx
@@ -22,7 +22,7 @@ Similar to the [`useMutation`](./mutations) hook, the `usePrefetch` hook will no
 
 It accepts two arguments: the first is the key of a query action that you [defined in your API service](../../api/rtk-query/createApi#endpoints), and the second is an object of two optional parameters:
 
-```ts title="usePrefetch Signature"
+```ts title="usePrefetch Signature" no-transpile
 export type PrefetchOptions =
   | { force?: boolean }
   | {
@@ -55,7 +55,7 @@ You can specify these prefetch options when declaring the hook or at the call si
    - **Assuming** you have a `useQuery` hook in the tree that is subscribed to the same query that you are prefetching:
      - `useQuery` will return `{isLoading: false, isFetching: true, ...rest`}
 
-```ts title="usePrefetch Example"
+```tsx title="usePrefetch Example"
 function User() {
   const prefetchUser = usePrefetch('getUser')
 
@@ -78,7 +78,7 @@ function User() {
 
 In some cases, you may want to prefetch a resource immediately. You can implement this in just a few lines of code:
 
-```ts title="hooks/usePrefetchImmediately.ts"
+```ts title="hooks/usePrefetchImmediately.ts" no-transpile
 type EndpointNames = keyof typeof api.endpoints
 
 export function usePrefetchImmediately<T extends EndpointNames>(
@@ -102,7 +102,7 @@ If you're not using the `usePrefetch` hook, you can recreate the same behavior e
 
 When dispatching the `prefetch` thunk as shown below you will see the same exact behavior as [described here](#what-to-expect-when-you-call-the-callback).
 
-```js title="Non-hook prefetching example"
+```ts title="Non-hook prefetching example" no-transpile
 store.dispatch(
   api.util.prefetch(endpointName, arg, { force: false, ifOlderThan: 10 })
 )
@@ -110,7 +110,7 @@ store.dispatch(
 
 You can also dispatch the query action, but you would be responsible for implementing any additional logic.
 
-```js title="Alternate method of manual prefetching"
+```ts title="Alternate method of manual prefetching" no-transpile
 dispatch(api.endpoints[endpointName].initiate(arg, { forceRefetch: true }))
 ```
 
@@ -120,7 +120,13 @@ This is a very basic example that shows how you can prefetch when a user hovers 
 
 <iframe
   src="https://codesandbox.io/embed/concepts-prefetching-h594j?fontsize=12&hidenavigation=1&theme=dark"
-  style={{ width: '100%', height: '600px', border: 0, borderRadius: '4px', overflow: 'hidden' }}
+  style={{
+    width: '100%',
+    height: '600px',
+    border: 0,
+    borderRadius: '4px',
+    overflow: 'hidden',
+  }}
   title="rtk-query-react-hooks-usePrefetch-example"
   allow="geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb"
   sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
@@ -132,7 +138,13 @@ Picking up on our last example, we automatically `prefetch` the next page, givin
 
 <iframe
   src="https://codesandbox.io/embed/concepts-prefetching-automatic-2id61?fontsize=12&hidenavigation=1&theme=dark"
-  style={{ width: '100%', height: '600px', border: 0, borderRadius: '4px', overflow: 'hidden' }}
+  style={{
+    width: '100%',
+    height: '600px',
+    border: 0,
+    borderRadius: '4px',
+    overflow: 'hidden',
+  }}
   title="rtk-query-react-hooks-usePrefetch-example"
   allow="geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb"
   sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
@@ -144,8 +156,14 @@ After the first query initialized by `useQuery` runs, we automatically fetch all
 
 <iframe
   src="https://codesandbox.io/embed/concepts-prefetching-automatic-waterfall-ihe5e?fontsize=12&hidenavigation=1&theme=dark&module=%2Fsrc%2Ffeatures%2Fposts%2FPostsManager.tsx"
-  style={{ width: '100%', height: '600px', border: 0, borderRadius: '4px', overflow: 'hidden' }}
-     title="Concepts Prefetching Automatic Waterfall"
+  style={{
+    width: '100%',
+    height: '600px',
+    border: 0,
+    borderRadius: '4px',
+    overflow: 'hidden',
+  }}
+  title="Concepts Prefetching Automatic Waterfall"
   allow="geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb"
   sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
 ></iframe>
