--- a/docs/usage/rtk-query/queries.mdx
+++ b/docs/usage/rtk-query/queries.mdx
@@ -30,12 +30,12 @@ const api = createApi({
   }),
   tagTypes: ['Post'],
   endpoints: (build) => ({
-    getPost: build.query<Post[], number>({
+    getPost: build.query<Post, number>({
       // highlight-start
       // note: an optional `queryFn` may be used in place of `query`
       query: (id) => ({ url: `post/${id}` }),
       // Pick out data and prevent nested properties in a hook or selector
-      transformResponse: (response: { data: Post[] }) => response.data,
+      transformResponse: (response: { data: Post }) => response.data,
       // The 2nd parameter is the destructured `queryApi`
       onStart(id, { dispatch, getState, extra, requestId, context }) {},
       // `result` is the server response
