- update `optimistic-updates` codeblocks

--- a/docs/usage/rtk-query/error-handling.mdx
+++ b/docs/usage/rtk-query/error-handling.mdx
@@ -160,7 +160,7 @@ There are quite a few ways that you can manage your errors, and in some cases, y
 Redux-Toolkit released [matching utilities](https://redux-toolkit.js.org/api/matching-utilities#matching-utilities) in v1.5 that we can leverage for a lot of custom behaviors.
 :::
 
-```ts title="Error catching middleware"
+```ts title="Error catching middleware example"
 import { MiddlewareAPI, isRejectedWithValue, Middleware } from '@reduxjs/toolkit'
 import { toast } from 'your-cool-library'
 
